<resources>
    <string name="app_name">Objection!</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="settings_header">Voice &amp; Splash</string>
    <string name="threshold_header">Threshold</string>
    <string name="about_header">About</string>
    <string name="other_header">Other</string>


    <string name="voice">Voice</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="character">Character</string>
    <string name="is_voice">Play Voice</string>
    <string name="is_vib">Vibrate</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Objection!</string>
</resources>